# pixiv-tag-analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  analyze.py  analyze_.py  client.json  client.sample.json  pixiv_tag_analyze.py  readme.md  requirements.txt  setup.cfg  setup.py
pta/: PixivTagAnalyzer.py  __init__.py  auth.py  main.py
