[metadata]
name = pixiv_tag_analyzer
version = attr: pta.__version__
description = ollects information on any pixiv user's posts and bookmarks, and explores the user's sexuality from the tags.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/pixiv-tag-analyzer
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    gppt>=1.7
    pixivpy>=3.7.0
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    pta = pta.main:main

[options.extras_require]
dev =
    black
    flake8
    mypy
    setuptools>=46.4.0
    types-setuptools

[options.package_data]
pta = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
